# vscode_docker_cpp_template

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/: clang-format.cmake  cppcheck.cmake
src/: main.cpp
test_data/: in.txt  out.txt
